tests/machine/x/go/dataset_sort_take_limit.error
Error on line 0: run error: exit status 1
panic: interface conversion: interface {} is int, not float64

goroutine 1 [running]:
main._cast[...]({0x4a2e00?, 0x4e2238?})
	/workspace/mochi/tests/machine/x/go/dataset_sort_take_limit.go:53 +0x45
main.main.main.func1.func3({0xc0000aa050?, 0x0?, 0x0?})
	/workspace/mochi/tests/machine/x/go/dataset_sort_take_limit.go:38 +0x67
main._query({0xc0000b6000, 0x7, 0x4a1be0?}, {0xc0000a0e08, 0x0, 0x4e2510?}, {0x4c5470, 0x0, 0x4c5478, 0x1, ...})
	/workspace/mochi/tests/machine/x/go/dataset_sort_take_limit.go:225 +0x41f
main.main.func1(...)
	/workspace/mochi/tests/machine/x/go/dataset_sort_take_limit.go:23
main.main()
	/workspace/mochi/tests/machine/x/go/dataset_sort_take_limit.go:45 +0x5dd
exit status 2

1: //go:build ignore
